--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,6 +1,6 @@
 /* RGB */
-$coral: rgba(240, 133, 148, 1);
-$platinum: rgba(229, 225, 238, 1);
-$light-grey: rgba(246, 239, 238, 1);
-$light-blue: rgba(223, 253, 255, 1);
-$blue: rgba(144, 190, 222, 1);
+$coral: rgb(240, 133, 148);
+$platinum: rgb(229, 225, 238);
+$light-grey: rgb(246, 239, 238);
+$light-blue: rgb(223, 253, 255);
+$blue: rgb(144, 190, 222);
