--- a/src/components/Tasks/index.scss
+++ b/src/components/Tasks/index.scss
@@ -20,3 +20,18 @@
     max-height: 380px;
     overflow: scroll;
 }
+
+.task-list-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .task-picker {
+        padding: 11px;
+    }
+}
+
+.task-time-spent-header {
+    padding: 5px 5px;
+    font-size: .75em;
+}
